<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradient_background">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:gravity="center"
        android:ems="15"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/registration"/>

    <EditText
        android:id="@+id/signUpEditTextEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="32dp"
        android:inputType="textEmailAddress"
        android:hint="@string/input_email"/>

    <EditText
        android:id="@+id/signUpEditTextTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/signUpEditTextTextPasswordRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="48dp"
        android:layout_marginTop="16dp"
        android:inputType="textPassword"
        android:hint="@string/password_repeat"/>

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="64dp"
        android:text="@string/sign_up" />


</LinearLayout>